--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,6 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
-    <script src="./src/app.js"></script>
+    <script src="./src/index.js"></script>
   </body>
 </html>
